--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.1",
+    "firebase": "^5.0.2",
     "google-maps-react": "^2.0.2",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-select": "^1.2.1",
-    "react-router-dom": "^4.2.2"
+    "react-select": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
