--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.0.2",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "^0.0.20",
+    "firebase": "^5.0.2",
     "google-maps-react": "^2.0.2",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
@@ -14,6 +14,7 @@
     "react-calendar": "^2.14.0",
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1"
